--- a/Code/ShipWorks/packages.config
+++ b/Code/ShipWorks/packages.config
@@ -40,7 +40,9 @@
   <package id="Syncfusion.Compression.Base46" version="16.1.0.26" targetFramework="net46" />
   <package id="Syncfusion.Grid.Base" version="16.1.0.32" targetFramework="net46" />
   <package id="Syncfusion.Grid.Windows" version="16.1.0.32" targetFramework="net46" />
-  <package id="Syncfusion.Licensing" version="16.3.0.21" targetFramework="net46" />
+  <package id="Syncfusion.Licensing" version="16.3.0.29" targetFramework="net46" />
+  <package id="Syncfusion.SfInput.WPF" version="16.3.0.29" targetFramework="net46" />
+  <package id="Syncfusion.SfShared.WPF" version="16.3.0.29" targetFramework="net46" />
   <package id="Syncfusion.Shared.Base" version="16.1.0.32" targetFramework="net46" />
   <package id="Syncfusion.Shared.Windows" version="16.1.0.32" targetFramework="net46" />
   <package id="Syncfusion.SpellChecker.Base" version="16.1.0.32" targetFramework="net46" />
