--- a/Code/ShipWorks.Tests.Integration/App.config
+++ b/Code/ShipWorks.Tests.Integration/App.config
@@ -99,6 +99,14 @@
         <assemblyIdentity name="System.Reactive.Core" publicKeyToken="94bc3704cddfc263" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-3.0.3000.0" newVersion="3.0.3000.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Syncfusion.SfShared.Wpf" publicKeyToken="3d67ed1f87d44c89" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-16.3460.0.29" newVersion="16.3460.0.29" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Syncfusion.Licensing" publicKeyToken="632609b4d040f6b4" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-16.3460.0.29" newVersion="16.3460.0.29" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
 </configuration>
