--- a/Code/ShipWorks.UI/packages.config
+++ b/Code/ShipWorks.UI/packages.config
@@ -7,6 +7,9 @@
   <package id="MvvmLightLibs" version="5.3.0.0" targetFramework="net46" />
   <package id="SD.LLBLGen.Pro.ORMSupportClasses" version="5.1.2" targetFramework="net46" />
   <package id="SonarAnalyzer.CSharp" version="6.8.1.4648" targetFramework="net46" developmentDependency="true" />
+  <package id="Syncfusion.Licensing" version="16.3.0.29" targetFramework="net46" />
+  <package id="Syncfusion.SfInput.WPF" version="16.3.0.29" targetFramework="net46" />
+  <package id="Syncfusion.SfShared.WPF" version="16.3.0.29" targetFramework="net46" />
   <package id="System.Collections.Immutable" version="1.4.0" targetFramework="net46" />
   <package id="System.Reactive" version="3.1.1" targetFramework="net46" />
   <package id="System.Reactive.Core" version="3.1.1" targetFramework="net46" />
