--- a/Code/ShipWorks/ShipWorks.Core.csproj
+++ b/Code/ShipWorks/ShipWorks.Core.csproj
@@ -312,8 +312,14 @@
     <Reference Include="Syncfusion.Grid.Windows, Version=16.1460.0.32, Culture=neutral, PublicKeyToken=3d67ed1f87d44c89, processorArchitecture=MSIL">
       <HintPath>..\..\packages\Syncfusion.Grid.Windows.16.1.0.32\lib\net46\Syncfusion.Grid.Windows.dll</HintPath>
     </Reference>
-    <Reference Include="Syncfusion.Licensing, Version=16.3460.0.21, Culture=neutral, PublicKeyToken=632609b4d040f6b4, processorArchitecture=MSIL">
-      <HintPath>..\..\packages\Syncfusion.Licensing.16.3.0.21\lib\net46\Syncfusion.Licensing.dll</HintPath>
+    <Reference Include="Syncfusion.Licensing, Version=16.3460.0.29, Culture=neutral, PublicKeyToken=632609b4d040f6b4, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Syncfusion.Licensing.16.3.0.29\lib\net46\Syncfusion.Licensing.dll</HintPath>
+    </Reference>
+    <Reference Include="Syncfusion.SfInput.Wpf, Version=16.3460.0.29, Culture=neutral, PublicKeyToken=3d67ed1f87d44c89, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Syncfusion.SfInput.WPF.16.3.0.29\lib\net46\Syncfusion.SfInput.Wpf.dll</HintPath>
+    </Reference>
+    <Reference Include="Syncfusion.SfShared.Wpf, Version=16.3460.0.29, Culture=neutral, PublicKeyToken=3d67ed1f87d44c89, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Syncfusion.SfShared.WPF.16.3.0.29\lib\net46\Syncfusion.SfShared.Wpf.dll</HintPath>
     </Reference>
     <Reference Include="Syncfusion.Shared.Base, Version=16.1460.0.32, Culture=neutral, PublicKeyToken=3d67ed1f87d44c89, processorArchitecture=MSIL">
       <HintPath>..\..\packages\Syncfusion.Shared.Base.16.1.0.32\lib\net46\Syncfusion.Shared.Base.dll</HintPath>
@@ -753,6 +759,7 @@
     <Compile Include="ApplicationCore\IMainForm.cs" />
     <Compile Include="ApplicationCore\IMainGridControl.cs" />
     <Compile Include="ApplicationCore\IMainGridControlPipeline.cs" />
+    <Compile Include="ApplicationCore\IMainGridHeader.cs" />
     <Compile Include="ApplicationCore\Interaction\AsyncMenuCommand.cs" />
     <Compile Include="ApplicationCore\Interaction\IMenuCommand.cs" />
     <Compile Include="ApplicationCore\Interaction\IMenuCommandExecutionContext.cs" />
@@ -773,6 +780,7 @@
     <Compile Include="ApplicationCore\MainForm.BasicUIHeartbeat.cs">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="ApplicationCore\MainGridHeaderViewModel.cs" />
     <Compile Include="Filters\Content\Conditions\OrderItems\Custom1Condition.cs" />
     <Compile Include="Filters\Content\Conditions\OrderItems\Custom2Condition.cs" />
     <Compile Include="Filters\Content\Conditions\OrderItems\Custom3Condition.cs" />
@@ -10475,7 +10483,7 @@
     <None Include="Resources\folderclosed_copy.png" />
     <None Include="Resources\CopyFolderHS.png" />
     <None Include="Resources\move_into_folder.png" />
-    <None Include="Resources\form_blue.png" />
+    <Resource Include="Resources\form_blue.png" />
     <None Include="Resources\folderclosed.png" />
     <None Include="Resources\dude3.png" />
     <None Include="Resources\funnel.png" />
@@ -10714,7 +10722,7 @@
     <None Include="Resources\lock_ok.png" />
     <None Include="Resources\lock.png" />
     <None Include="Resources\data_out.png" />
-    <None Include="Resources\hourglass16.png" />
+    <Resource Include="Resources\hourglass16.png" />
     <None Include="Resources\currency_dollar2.png" />
     <None Include="Resources\paperclip1.png" />
     <None Include="Resources\data_disk1.png" />
@@ -10901,6 +10909,7 @@
     <Resource Include="Resources\box_closed_with_label_32_32.png" />
     <None Include="Resources\bonanza.png" />
     <Content Include="Resources\box_tall_32.png" />
+    <Resource Include="Resources\buttonEndSearchDisabled.png" />
     <Content Include="Resources\data_16.png" />
     <Content Include="Resources\data_error_16.png" />
     <Content Include="Resources\data_ok_16.png" />
