--- a/Code/ShipWorks.Escalator/ShipWorks.Escalator.csproj
+++ b/Code/ShipWorks.Escalator/ShipWorks.Escalator.csproj
@@ -56,6 +56,7 @@
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System.Configuration.Install" />
+    <Reference Include="System.Management" />
     <Reference Include="System.ServiceProcess" />
   </ItemGroup>
 </Project>
