--- a/Code/ShipWorks.Executable/App.config
+++ b/Code/ShipWorks.Executable/App.config
@@ -77,4 +77,7 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <System.Windows.Forms.ApplicationConfigurationSection>
+    <add key="DpiAwareness" value="PerMonitorV2" />
+  </System.Windows.Forms.ApplicationConfigurationSection>
 </configuration>
