--- a/Code/Interapptive.Shared/Interapptive.Shared.csproj
+++ b/Code/Interapptive.Shared/Interapptive.Shared.csproj
@@ -179,6 +179,7 @@
       <Link>Properties\AssemblyInfoCommon.cs</Link>
     </Compile>
     <Compile Include="AutoUpdate\AutoUpdateStatusProvider.cs" />
+    <Compile Include="AutoUpdate\IAutoUpdateStatusProvider.cs" />
     <Compile Include="AutoUpdate\ShipWorksLauncher.cs" />
     <Compile Include="AutoUpdate\UpdateWindowData.cs" />
     <Compile Include="Business\Geography\CurrencyCode.cs" />
