TP#23813: Add UploadDocument web references

--- a/Code/ShipWorks.ThirdPartyApi/App.config
+++ b/Code/ShipWorks.ThirdPartyApi/App.config
@@ -3,7 +3,7 @@
 
   <configSections>
 
-    <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
+    <sectionGroup name="applicationSettings" type="System.Configuration.ApplicationSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
       <section name="ShipWorks.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
     </sectionGroup>
   </configSections>
@@ -12,7 +12,6 @@
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0" />
   </startup>
 
-  <applicationSettings />
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
@@ -45,4 +44,12 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
+  <applicationSettings>
+    <ShipWorks.Properties.Settings>
+      <setting name="ShipWorks_ThirdPartyApi_Shipping_Carriers_FedEx_WebServices_UploadDocument_UploadDocumentService"
+        serializeAs="String">
+        <value>https://wsbeta.fedex.com:443/web-services/uploaddocument</value>
+      </setting>
+    </ShipWorks.Properties.Settings>
+  </applicationSettings>
 </configuration>
