--- a/Code/ShipWorks.ThirdPartyApi/Properties/Settings.settings
+++ b/Code/ShipWorks.ThirdPartyApi/Properties/Settings.settings
@@ -1,5 +1,9 @@
 ﻿<?xml version='1.0' encoding='utf-8'?>
 <SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="ShipWorks.Properties" GeneratedClassName="Settings">
   <Profiles />
-  <Settings />
+  <Settings>
+    <Setting Name="ShipWorks_ThirdPartyApi_Shipping_Carriers_FedEx_WebServices_UploadDocument_UploadDocumentService" Type="(Web Service URL)" Scope="Application">
+      <Value Profile="(Default)">https://wsbeta.fedex.com:443/web-services/uploaddocument</Value>
+    </Setting>
+  </Settings>
 </SettingsFile>
