--- a/Code/Interapptive.Shared/Interapptive.Shared.csproj
+++ b/Code/Interapptive.Shared/Interapptive.Shared.csproj
@@ -534,6 +534,7 @@
     <Compile Include="Utility\IClrHelper.cs" />
     <Compile Include="Utility\IDateTimeProvider.cs" />
     <Compile Include="Utility\IEnvironmentWrapper.cs" />
+    <Compile Include="Utility\ImageExtensions.cs" />
     <Compile Include="Utility\IResult.cs" />
     <Compile Include="Utility\ITelemetryCollection.cs" />
     <Compile Include="Utility\Maybe.cs" />
