--- a/Code/ShipWorks.Shipping/ShipWorks.Shipping.csproj
+++ b/Code/ShipWorks.Shipping/ShipWorks.Shipping.csproj
@@ -184,6 +184,18 @@
     <Compile Include="Carriers\Amazon\SFP\IAmazonSFPServiceTypeRepository.cs" />
     <Compile Include="Carriers\Amazon\SFP\RateGroupFilters\AmazonSFPAvailableServiceTypeRateGroupFilter.cs" />
     <Compile Include="Carriers\Amazon\SWA\AmazonSWAShipmentType.cs" />
+    <Compile Include="Carriers\Amazon\SWA\AmazonSWAPackageAdapter.cs" />
+    <Compile Include="Carriers\Amazon\SWA\AmazonSWAAccountDescription.cs" />
+    <Compile Include="Carriers\Amazon\SWA\AmazonSWAAccountManager.cs" />
+    <Compile Include="Carriers\Amazon\SWA\AmazonSWAAccountRepository.cs" />
+    <Compile Include="Carriers\Amazon\SWA\AmazonSWADownloadedLabelData.cs" />
+    <Compile Include="Carriers\Amazon\SWA\AmazonSWAException.cs" />
+    <Compile Include="Carriers\Amazon\SWA\AmazonSWALabelService.cs" />
+    <Compile Include="Carriers\Amazon\SWA\AmazonSWAPrefetchProvider.cs" />
+    <Compile Include="Carriers\Amazon\SWA\AmazonSWAShipmentAdapter.cs" />
+    <Compile Include="Carriers\Amazon\SWA\AmazonSWAShipmentRequestFactory.cs" />
+    <Compile Include="Carriers\Amazon\SWA\AmazonSWAShipmentServicesBuilder.cs" />
+    <Compile Include="Carriers\Amazon\SWA\AmazonSWAShippingProfileApplicationStrategy.cs" />
     <Compile Include="Carriers\Asendia\AsendiaAccountRepository.cs" />
     <Compile Include="Carriers\Asendia\AsendiaDownloadedLabelData.cs" />
     <Compile Include="Carriers\Asendia\AsendiaException.cs" />
